--- a/src/View/MenuBibliotecario.form
+++ b/src/View/MenuBibliotecario.form
@@ -470,47 +470,50 @@
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
+              <EmptySpace min="-2" pref="249" max="-2" attributes="0"/>
+              <Component id="jLabel28" min="-2" max="-2" attributes="0"/>
+              <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
+                  <Component id="jLabel16" min="-2" max="-2" attributes="0"/>
+                  <Component id="jLabel29" min="-2" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace min="94" max="32767" attributes="0"/>
+          </Group>
+          <Group type="102" attributes="0">
+              <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="bntGerenciarReservas" min="-2" pref="224" max="-2" attributes="0"/>
+                  <Component id="bntEditarDadosDeUsuário" min="-2" pref="224" max="-2" attributes="0"/>
+                  <Component id="bntRealizarDevolucao" min="-2" pref="224" max="-2" attributes="0"/>
+                  <Component id="bntRegistrarEmprestimo" alignment="0" min="-2" pref="224" max="-2" attributes="0"/>
+              </Group>
+              <EmptySpace min="-2" pref="123" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="bntVisualizarCatalogo" alignment="0" min="-2" pref="224" max="-2" attributes="0"/>
+                  <Component id="bntRenovarEmprestimo" alignment="0" min="-2" pref="224" max="-2" attributes="0"/>
+                  <Component id="bntEditarDisponibilidadeDeLivro" min="-2" pref="224" max="-2" attributes="0"/>
+              </Group>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" attributes="0">
+                      <EmptySpace min="-2" pref="95" max="-2" attributes="0"/>
+                      <Component id="bntPesquisarLivroDisponiveisParaEmprestimo" min="-2" pref="224" max="-2" attributes="0"/>
+                      <EmptySpace min="0" pref="6" max="32767" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="1" attributes="0">
+                      <EmptySpace max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="bntGerenciarReservas" min="-2" pref="224" max="-2" attributes="0"/>
-                          <Component id="bntRegistrarEmprestimo" min="-2" pref="224" max="-2" attributes="0"/>
-                          <Component id="bntEditarDadosDeUsuário" min="-2" pref="224" max="-2" attributes="0"/>
-                          <Component id="bntRealizarDevolucao" min="-2" pref="224" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace min="-2" pref="123" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="bntEditarDisponibilidadeDeLivro" alignment="0" min="-2" pref="224" max="-2" attributes="0"/>
-                          <Component id="bntVisualizarCatalogo" alignment="0" min="-2" pref="224" max="-2" attributes="0"/>
-                          <Component id="bntConsultarHistoricoDeUsuario" min="-2" max="-2" attributes="0"/>
-                          <Component id="bntRenovarEmprestimo" alignment="0" min="-2" pref="224" max="-2" attributes="0"/>
-                      </Group>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" attributes="0">
-                              <EmptySpace min="-2" pref="95" max="-2" attributes="0"/>
-                              <Component id="bntPesquisarLivroDisponiveisParaEmprestimo" min="-2" pref="224" max="-2" attributes="0"/>
+                          <Component id="bntAdiconarLivro" alignment="1" min="-2" pref="224" max="-2" attributes="0"/>
+                          <Group type="102" alignment="1" attributes="0">
+                              <Component id="bntRemoverLivro1" min="-2" pref="224" max="-2" attributes="0"/>
+                              <EmptySpace max="-2" attributes="0"/>
                           </Group>
                           <Group type="102" alignment="1" attributes="0">
+                              <Component id="bntConsultarHistoricoDeUsuario" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="bntAdiconarLivro" alignment="1" min="-2" pref="224" max="-2" attributes="0"/>
-                                  <Component id="bntRemoverLivro" alignment="1" min="-2" pref="224" max="-2" attributes="0"/>
-                              </Group>
                           </Group>
-                      </Group>
-                  </Group>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="249" max="-2" attributes="0"/>
-                      <Component id="jLabel28" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jLabel16" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabel29" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
-              <EmptySpace min="94" max="32767" attributes="0"/>
           </Group>
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="32767" attributes="0"/>
@@ -548,22 +551,22 @@
                       </Group>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="bntEditarDisponibilidadeDeLivro" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
                           <Component id="bntRealizarDevolucao" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
+                          <Component id="bntRemoverLivro1" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
-                      <Component id="bntRemoverLivro" min="-2" pref="44" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="49" max="-2" attributes="0"/>
+                      <Component id="bntEditarDisponibilidadeDeLivro" min="-2" pref="44" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="bntVisualizarCatalogo" alignment="0" min="-2" pref="44" max="-2" attributes="0"/>
-                  <Component id="bntPesquisarLivroDisponiveisParaEmprestimo" alignment="0" min="-2" pref="44" max="-2" attributes="0"/>
-                  <Component id="bntGerenciarReservas" min="-2" pref="44" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="3" attributes="0">
+                  <Component id="bntVisualizarCatalogo" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
+                  <Component id="bntGerenciarReservas" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
+                  <Component id="bntPesquisarLivroDisponiveisParaEmprestimo" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="49" max="32767" attributes="0"/>
+              <EmptySpace pref="55" max="32767" attributes="0"/>
               <Component id="btnCancelar" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
           </Group>
@@ -588,17 +591,6 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bntConsultarHistoricoDeUsuarioActionPerformed"/>
-      </Events>
-    </Component>
-    <Component class="javax.swing.JButton" name="bntRemoverLivro">
-      <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Segoe UI" size="14" style="0"/>
-        </Property>
-        <Property name="text" type="java.lang.String" value="Remover Livros"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bntRemoverLivroActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="bntAdiconarLivro">
@@ -699,9 +691,6 @@
         <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="ff" green="ff" red="ff" type="rgb"/>
         </Property>
-        <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="2" name="C:\Users\laris\OneDrive\Documentos\NetBeansProjects\Biblioteca1\Imagens\logo_bibliotecaCorija (1) (2).png"/>
-        </Property>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="bntRenovarEmprestimo">
@@ -724,6 +713,17 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bntRealizarDevolucaoActionPerformed"/>
+      </Events>
+    </Component>
+    <Component class="javax.swing.JButton" name="bntRemoverLivro1">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Segoe UI" size="14" style="0"/>
+        </Property>
+        <Property name="text" type="java.lang.String" value="Remover Livros"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bntRemoverLivro1ActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
