--- a/src/View/MenuBibliotecario.form
+++ b/src/View/MenuBibliotecario.form
@@ -482,10 +482,10 @@
           <Group type="102" attributes="0">
               <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="bntGerenciarReservas" min="-2" pref="224" max="-2" attributes="0"/>
                   <Component id="bntEditarDadosDeUsuário" min="-2" pref="224" max="-2" attributes="0"/>
                   <Component id="bntRealizarDevolucao" min="-2" pref="224" max="-2" attributes="0"/>
                   <Component id="bntRegistrarEmprestimo" alignment="0" min="-2" pref="224" max="-2" attributes="0"/>
+                  <Component id="bntRemoverLivro1" min="-2" pref="224" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="123" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
@@ -503,10 +503,6 @@
                       <EmptySpace max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="bntAdiconarLivro" alignment="1" min="-2" pref="224" max="-2" attributes="0"/>
-                          <Group type="102" alignment="1" attributes="0">
-                              <Component id="bntRemoverLivro1" min="-2" pref="224" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
-                          </Group>
                           <Group type="102" alignment="1" attributes="0">
                               <Component id="bntConsultarHistoricoDeUsuario" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
@@ -545,28 +541,33 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
                       <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="bntConsultarHistoricoDeUsuario" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
-                          <Component id="bntRegistrarEmprestimo" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
-                      </Group>
+                      <Component id="bntRegistrarEmprestimo" min="-2" pref="44" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="bntRealizarDevolucao" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
-                          <Component id="bntRemoverLivro1" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
-                      </Group>
+                      <Component id="bntRealizarDevolucao" min="-2" pref="44" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="49" max="-2" attributes="0"/>
-                      <Component id="bntEditarDisponibilidadeDeLivro" min="-2" pref="44" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="bntEditarDisponibilidadeDeLivro" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
+                          <Component id="bntConsultarHistoricoDeUsuario" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
               </Group>
-              <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="bntVisualizarCatalogo" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
-                  <Component id="bntGerenciarReservas" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
-                  <Component id="bntPesquisarLivroDisponiveisParaEmprestimo" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Group type="102" attributes="0">
+                      <EmptySpace min="-2" pref="35" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="bntVisualizarCatalogo" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
+                          <Component id="bntRemoverLivro1" alignment="3" min="-2" pref="44" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace max="32767" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="1" attributes="0">
+                      <EmptySpace pref="25" max="32767" attributes="0"/>
+                      <Component id="bntPesquisarLivroDisponiveisParaEmprestimo" min="-2" pref="44" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="65" max="-2" attributes="0"/>
+                  </Group>
               </Group>
-              <EmptySpace pref="55" max="32767" attributes="0"/>
               <Component id="btnCancelar" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
           </Group>
@@ -613,17 +614,6 @@
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bntRegistrarEmprestimoActionPerformed"/>
-      </Events>
-    </Component>
-    <Component class="javax.swing.JButton" name="bntGerenciarReservas">
-      <Properties>
-        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-          <Font name="Segoe UI" size="14" style="0"/>
-        </Property>
-        <Property name="text" type="java.lang.String" value="Gerenciar Reservas"/>
-      </Properties>
-      <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="bntGerenciarReservasActionPerformed"/>
       </Events>
     </Component>
     <Component class="javax.swing.JButton" name="bntEditarDisponibilidadeDeLivro">
