--- a/src/View/RealizarDevolucao.form
+++ b/src/View/RealizarDevolucao.form
@@ -679,7 +679,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel16">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Cod. Livro:"/>
+        <Property name="text" type="java.lang.String" value="Cod. emprestimo"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtCodLivro">
